# GDOPT

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml
analysis/: L2.py  dualTest.py  plotL2.py  refinementCriteria.py  stability.py  vectorizedCodegenTest.py
animations/invertedPendulum/: graphics.py  invertedPendulumAnimation.py
codegen/: model.py  optimization.py
codegen/animations/: graphics.py  invertedPendulumAnimation.py
codegen/examples/: analyticHypersensitive.py  analyticHypersensitiveGenerated.cpp  analyticHypersensitiveGeneratedParams.h  bangBang  bangBang.py  bangBangGeneratedParams.h  batchReactor.py  dieselMotor.cpp  dieselMotorGenerated.cpp  dieselMotorGenerated.h  dieselMotorGeneratedParams.h  dieselmotor.py  example.cpp  example.h  hypersensitive.py  invertedPendulum.py  invertedPendulumGenerated.cpp  invertedPendulumGenerated.h  invertedPendulumGeneratedParams.h  pureParameter.py  pureParameterGenerated.cpp  pureParameterGenerated.h  pureParameterGeneratedParams.h  satellite.py  satelliteGenerated.cpp  satelliteGenerated.h  satelliteGeneratedParams.h  simpleParameter.py  simpleParameterGenerated.cpp  simpleParameterGenerated.h  simpleParameterGeneratedParams.h
examples/: analyticHypersensitive.cpp  analyticHypersensitive.h  analyticHypersensitive.py  bangBang.py  batchReactor.cpp  batchReactor.h  batchReactor.py  benchmark.py  chemicalReaction.py  dieselMotor.cpp  dieselMotor.py  dieselmotor.py  extendedBatchReactor.py  generalizedBatchReactor.py  helloWorld.py  hypersensitive.cpp  hypersensitive.h  hypersensitive.py  invertedPendulum.py  lorenz.py  nominalBatchReactor.py  nominalBatchReactor2.py  oilShalePyrolysis.py  parameterSweep.cpp  parameterSweep.h  piecewiseBangBang.py  pureParameter.py  rayleigh.py  rocketTrajectory.cpp  rocketTrajectory.h  satellite.cpp  satellite.h  satellite.py  simpleParameter.py  trivialBangBang.cpp  trivialBangBang.h  vanDerPol.py
examples/.generated/analyticHypersensitive/: analyticHypersensitive  analyticHypersensitiveGenerated.cpp  analyticHypersensitiveGeneratedParams.h
examples/.generated/bangBang/: bangBang  bangBangGenerated.cpp  bangBangGeneratedParams.h
examples/.generated/batchReactor/: batchReactor  batchReactorGenerated.cpp  batchReactorGeneratedParams.h
examples/.generated/benchmark/: benchmark  benchmarkGenerated.cpp  benchmarkGeneratedParams.h
examples/.generated/dieselMotor/: dieselMotor  dieselMotorGenerated.cpp  dieselMotorGeneratedParams.h
examples/.generated/generalizedBatchReactor/: generalizedBatchReactor  generalizedBatchReactorGenerated.cpp  generalizedBatchReactorGeneratedParams.h
examples/.generated/hypersensitive/: hypersensitive  hypersensitiveGenerated.cpp  hypersensitiveGeneratedParams.h
examples/.generated/invertedPendulum/: invertedPendulum  invertedPendulumGenerated.cpp  invertedPendulumGeneratedParams.h
examples/.generated/oilShalePyrolysis/: oilShalePyrolysis  oilShalePyrolysisGenerated.cpp  oilShalePyrolysisGeneratedParams.h
examples/.generated/pureParameter/: pureParameter  pureParameterGenerated.cpp  pureParameterGeneratedParams.h
examples/.generated/satellite/: satellite  satelliteGenerated.cpp  satelliteGeneratedParams.h
examples/.generated/simpleParameter/: simpleParameter  simpleParameterGenerated.cpp  simpleParameterGeneratedParams.h
examples/.generated/vanDerPol/: vanDerPol  vanDerPolGenerated.cpp  vanDerPolGeneratedParams.h
optimization/: __init__.py  expressions.py  functions.py  guesses.py  radauHandling.py  structures.py  variables.py
python/gdopt/: __init__.py  expressions.py  functions.py  model.py  radauHandling.py  structures.py  variables.py
scripts/: derivativeCalculator.py  plotOptimum.py  plotSparsity.py  refinementCriteria.py
src/: CMakeLists.txt  config.cpp  config.h  constants.h  constraint.h  expression.h  gdop.cpp  gdop.h  gdop_impl.h  integrator.cpp  integrator.h  main.cpp  mesh.cpp  mesh.h  problem.cpp  problem.h  solver.cpp  solver.h  test_nlp.cpp  test_nlp.h  util.h
usersguide/: usersguide.aux  usersguide.out  usersguide.tex  usersguide.toc
