[project]
name = "gdopt"
version = "0.1.1"
dependencies = [
    "symengine",
    "matplotlib",
    "numpy",
    "scipy",
    "pandas",
    "importlib_resources"
]
description = "General Dynamic Optimizer"

[tool.setuptools.packages.find]
# All the following settings are optional:
#where = ["python"]  # ["."] by default
include = ["gdopt*"]  # ["*"] by default

[build-system] # How pip and other frontends should build this project
requires = ["py-build-cmake~=0.1.8"]
build-backend = "py_build_cmake.build"

[tool.py-build-cmake.module] # Where to find the Python module to package
directory = "python"

[tool.py-build-cmake.sdist] # What to include in source distributions
include = ["CMakeLists.txt", "src/*"]

[tool.py-build-cmake.cmake] # How to build the CMake project
build_type = "Release"
source_path = "."
build_args = ["-j"]
install_components = ["libgdopt"]

[tool.py-build-cmake.stubgen] # Whether and how to generate typed stub files
